[tool.poetry]
name = "progbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
discord = "^1.0.1"
youtube-dl = "^2021.2.4"
PyNaCl = "^1.4.0"
replit = "^2.0.0"
ffmpeg = "^1.4"
utils = "^1.0.1"
coloredlogs = "^15.0"
Cogs = "^0.4.4"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
